edit readme, add control pulldown menu, set gameboard width and height, add player divs

--- a/gamepage.html
+++ b/gamepage.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/gamepage.css">
 </head>
-<body>
+<body class="height margin">
   <header>
     <h2 class="gameName">Easy Company</h2>
     <div class="dropdown">
@@ -14,10 +14,10 @@
     	</div>
     </div>
   </header>
-  <div class="gameboard">
-    <div class="playerOne player">
+  <div class="gameboard height margin">
+    <div class="playerOne players"">
     </div>
-    <div class="playerTwo player">
+    <div class="playerTwo players">
     </div>
   </div>
 
