Add simple collision detection function for player divs that returns a boolean

--- a/gamepage.html
+++ b/gamepage.html
@@ -14,10 +14,13 @@
     	</div>
     </div>
   </header>
-  <div class="gameboard height margin">
-    <div class="playerOne players"">
-    </div>
-    <div class="playerTwo players">
+  <!-- <canvas class="canvasBoard" width="1440" height="650"></canvas> -->
+  <div class="wrapper">
+    <div class="gameboard height margin">
+      <div class="playerOne players"">
+      </div>
+      <div class="playerTwo players">
+      </div>
     </div>
   </div>
 
