add header styling and a few imgs

--- a/gamepage.html
+++ b/gamepage.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Easy Company</title>
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/gamepage.css">
 </head>
 <body class="height margin">
   <header>
-    <h2 class="gameName">Easy Company</h2>
+    <h2 class="gameName" data-text="Easy Company">Easy Company</h2>
+    <div id="airborne"></div>
     <div class="dropdown">
     	<span>Controls</span>
     	<div class="dropdownContent">
