add player images

--- a/gamepage.html
+++ b/gamepage.html
@@ -12,7 +12,7 @@
     <div class="dropdown">
     	<span>Controls</span>
     	<div class="dropdownContent">
-    	<p>Instructions go here</p>
+    	<p>Move left: "A" key<br>Move right: "D" key</p>
     	</div>
     </div>
   </header>
@@ -23,6 +23,7 @@
       </div>
       <div class="playerTwo players">
       </div>
+      <div class="plane"></div>
     </div>
   </div>
 
