add warzone backdrop, and edit controls menu

--- a/gamepage.html
+++ b/gamepage.html
@@ -12,7 +12,10 @@
     <div class="dropdown">
     	<span>Controls</span>
     	<div class="dropdownContent">
-    	<p>Move left: "A" key<br>Move right: "D" key</p>
+        <h2>Player 1:</h2>
+    	  <p>Move left:  "A" key <br>Move right:  "D" key</p>
+        <h2>Player 2:</h2>
+        <p>Move left:  "J" key <br>Move right:  "L" key</p>
     	</div>
     </div>
   </header>
