add non-functional play button with styling

--- a/gamepage.html
+++ b/gamepage.html
@@ -22,11 +22,12 @@
   <!-- <canvas class="canvasBoard" width="1440" height="650"></canvas> -->
   <div class="wrapper">
     <div class="gameboard height margin">
+      <div class="plane"></div>
       <div class="playerOne players"">
       </div>
       <div class="playerTwo players">
       </div>
-      <div class="plane"></div>
+      <button id="playBtn" class="button">Play Now</button>
     </div>
   </div>
 
