add audio, footfooter, styling

--- a/gamepage.html
+++ b/gamepage.html
@@ -9,6 +9,11 @@
 
  <!--  Link to CSS stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/gamepage.css">
+
+  <audio id="theme" src="theme.mp3" loop="loop"></audio>
+  <audio id="planeAudio" src="planeAudio.mp3"></audio>
+  <audio id="explosion" src="explosion.mp3"></audio>
+  <audio id="ambient" src="ambient.mp3"></audio>
 </head>
 
 <!-- Main body of game -->
@@ -60,5 +65,9 @@
   <!-- Connect to javascript page -->
   <script type="text/javascript" src="js/gamepage.js">
   </script>
+  
+  <footer>
+    
+  </footer>
 </body>
 </html>
