add Unsolved Issues to ReadMe

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   <!-- Chosen font for game -->
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700" rel="stylesheet">
 
- <!--  Link to CSS stylesheet -->
+  <!--  Link to CSS stylesheet -->
 	<link rel="stylesheet" type="text/css" href="css/gamepage.css">
 
+  <!-- Theme audio -->
   <audio id="theme" src="theme.mp3" loop="loop"></audio>
+
+  <!-- Plane Audio -->
   <audio id="planeAudio" src="planeAudio.mp3"></audio>
+
+  <!-- Explosion effect audio -->
   <audio id="explosion" src="explosion.mp3"></audio>
+
+  <!-- Ambient battlefield noise -->
   <audio id="ambient" src="ambient.mp3"></audio>
 </head>
 
@@ -66,8 +73,6 @@
   <script type="text/javascript" src="js/gamepage.js">
   </script>
   
-  <footer>
-    
-  </footer>
+  <footer> </footer>
 </body>
 </html>
