--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 	<link rel="stylesheet" type="text/css" href="css/gamepage.css">
 
   <!-- Theme audio -->
-  <audio id="theme" src="../mp3/theme.mp3" loop="loop"></audio>
+  <audio id="theme" src="mp3/theme.mp3" loop="loop"></audio>
 
   <!-- Plane Audio -->
-  <audio id="planeAudio" src="../mp3/planeAudio.mp3"></audio>
+  <audio id="planeAudio" src="mp3/planeAudio.mp3"></audio>
 
   <!-- Explosion effect audio -->
-  <audio id="explosion" src="../mp3/explosion.mp3"></audio>
+  <audio id="explosion" src="mp3/explosion.mp3"></audio>
 
   <!-- Ambient battlefield noise -->
-  <audio id="ambient" src="../mp3/ambient.mp3"></audio>
+  <audio id="ambient" src="mp3/ambient.mp3"></audio>
 </head>
 
 <!-- Main body of game -->
