change background color and make a little more mobile responsive

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <!-- Main body of game -->
 <body class="height margin">
   <header>
-
-    <!-- Game name -->
-    <h2 class="gameName" data-text="Easy Company">Easy Company</h2>
+    <div class="brand">
+      <!-- Game name -->
+      <h2 class="gameName" data-text="Easy Company">Easy Company</h2>
+    </div>
 
     <!-- Eagle patch -->
     <div id="airborne"></div>
-    
    <!--  Dropdown name and menu -->
     <div class="dropdown">
     	<span>Controls</span>
